footer and colors

--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
         </a>
     </nav>
     <div>
-        <div>
-        Contenthsrtjsyjkydjdshjdhyjsjs
-        </div>
         <footer>
-        Footer
+            <span>© Baltic Institute of Technology</span>
         </footer>
     </div>
 </body>
