--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/layout.css">
-
+    <link rel="stylesheet" href="./styles/pages/home.css">
 </head>
 <body>
     <nav>
@@ -49,7 +49,21 @@
             <span>Games</span>
         </a>
     </nav>
-    <div>
+    
+    <main>
+        <div class="greeting">
+            <h1>Good morning, Alfredo!</h1>
+            <span>TIME</span>
+        </div>
+        <div class="background">
+            <img src="/assets/background.png" alt="">
+        </div>
+        <div class="quotes">
+            <span>“First, solve the problem. Then, write the code.” - John Johnson</span>
+        </div>
+    </main>
+
+    <div class="footer-container">
         <footer>
             <span>© Baltic Institute of Technology</span>
         </footer>
