work in progress

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
             <span>Games</span>
         </a>
     </nav>
-    
+
     <main>
         <div class="greeting">
             <h1>Good morning, Alfredo!</h1>
             <span>TIME</span>
         </div>
         <div class="background">
-            <img src="/assets/background.png" alt="">
+            <img src="/assets/background-lg.png" alt="">
         </div>
         <div class="quotes">
-            <span>“First, solve the problem. Then, write the code.” - John Johnson</span>
+            <div>“First, solve the problem. Then, write the code.” - John Johnson</div>
         </div>
     </main>
 
